// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AlertBadge /> snapshot should match snapshot 1`] = `
<AlertBadge>
  <FocusRing
    focusRingClass="md-alert-badge-focus-ring"
  >
    <button
      className="md-alert-badge-wrapper"
      onBlur={[Function]}
      onClick={[Function]}
      onDragStart={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchCancel={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      type="button"
    />
  </FocusRing>
</AlertBadge>
`;

exports[`<AlertBadge /> snapshot should match snapshot with children, image and label 1`] = `
<AlertBadge
  image={
    <div>
      A
    </div>
  }
  label={
    <div>
      Example Label
    </div>
  }
>
  <FocusRing
    focusRingClass="md-alert-badge-focus-ring"
  >
    <button
      className="md-alert-badge-wrapper"
      onBlur={[Function]}
      onClick={[Function]}
      onDragStart={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchCancel={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      type="button"
    >
      <PrimativeConverter>
        <div>
          Example Children
        </div>
      </PrimativeConverter>
    </button>
  </FocusRing>
</AlertBadge>
`;

exports[`<AlertBadge /> snapshot should match snapshot with className 1`] = `
<AlertBadge
  className="example-class"
>
  <FocusRing
    focusRingClass="md-alert-badge-focus-ring"
  >
    <button
      className="example-class md-alert-badge-wrapper"
      onBlur={[Function]}
      onClick={[Function]}
      onDragStart={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchCancel={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      type="button"
    />
  </FocusRing>
</AlertBadge>
`;

exports[`<AlertBadge /> snapshot should match snapshot with color 1`] = `
<AlertBadge
  color="warning"
>
  <FocusRing
    focusRingClass="md-alert-badge-focus-ring"
  >
    <button
      className="md-alert-badge-wrapper"
      data-color="warning"
      onBlur={[Function]}
      onClick={[Function]}
      onDragStart={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchCancel={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      type="button"
    >
      <PrimativeConverter>
        <div>
          Example Text
        </div>
      </PrimativeConverter>
    </button>
  </FocusRing>
</AlertBadge>
`;

exports[`<AlertBadge /> snapshot should match snapshot with id 1`] = `
<AlertBadge
  id="example-id"
>
  <FocusRing
    focusRingClass="md-alert-badge-focus-ring"
  >
    <button
      className="md-alert-badge-wrapper"
      id="example-id"
      onBlur={[Function]}
      onClick={[Function]}
      onDragStart={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchCancel={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      type="button"
    />
  </FocusRing>
</AlertBadge>
`;

exports[`<AlertBadge /> snapshot should match snapshot with image 1`] = `
<AlertBadge
  image={
    <div>
      A
    </div>
  }
>
  <FocusRing
    focusRingClass="md-alert-badge-focus-ring"
  >
    <button
      className="md-alert-badge-wrapper"
      onBlur={[Function]}
      onClick={[Function]}
      onDragStart={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchCancel={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      type="button"
    >
      <PrimativeConverter
        key="0"
      >
        <div>
          A
        </div>
      </PrimativeConverter>
    </button>
  </FocusRing>
</AlertBadge>
`;

exports[`<AlertBadge /> snapshot should match snapshot with image and label 1`] = `
<AlertBadge
  image={
    <div>
      A
    </div>
  }
  label={
    <div>
      Example Label
    </div>
  }
>
  <FocusRing
    focusRingClass="md-alert-badge-focus-ring"
  >
    <button
      className="md-alert-badge-wrapper"
      onBlur={[Function]}
      onClick={[Function]}
      onDragStart={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchCancel={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      type="button"
    >
      <PrimativeConverter
        key="0"
      >
        <div>
          A
        </div>
      </PrimativeConverter>
      <PrimativeConverter
        key="1"
      >
        <div>
          Example Label
        </div>
      </PrimativeConverter>
    </button>
  </FocusRing>
</AlertBadge>
`;

exports[`<AlertBadge /> snapshot should match snapshot with label 1`] = `
<AlertBadge
  label={
    <div>
      Example Text
    </div>
  }
>
  <FocusRing
    focusRingClass="md-alert-badge-focus-ring"
  >
    <button
      className="md-alert-badge-wrapper"
      onBlur={[Function]}
      onClick={[Function]}
      onDragStart={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchCancel={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      type="button"
    >
      <PrimativeConverter
        key="1"
      >
        <div>
          Example Text
        </div>
      </PrimativeConverter>
    </button>
  </FocusRing>
</AlertBadge>
`;

exports[`<AlertBadge /> snapshot should match snapshot with style 1`] = `
<AlertBadge
  style={
    Object {
      "color": "pink",
    }
  }
>
  <FocusRing
    focusRingClass="md-alert-badge-focus-ring"
  >
    <button
      className="md-alert-badge-wrapper"
      onBlur={[Function]}
      onClick={[Function]}
      onDragStart={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchCancel={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      style={
        Object {
          "color": "pink",
        }
      }
      type="button"
    />
  </FocusRing>
</AlertBadge>
`;
